	PR c++/7939 	* typeck.c (comptypes): Don't ICE when its first argument is 	error_mark_node. 	(compparms): Reverse the arguments of same_type_p.

* g++.dg/template/crash11.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@71432 138bc75d-0d04-0410-961f-82ee72b054a4